force-app/main/default/objects/Related_Request__c/Related_Request__c.object-meta.xml
<CustomObject>
    <label>Related Request</label>
    <nameField>
        <displayFormat>RR-{000000}</displayFormat>
        <label>Related Request Numbers</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>