force-app/main/default/objects/Related_Request__c/fields/Converted_Request__c.field-meta.xml
<CustomField>
    <fullName>Converted_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted Request</label>
    <type>Checkbox</type>
</CustomField>