force-app/main/default/objects/Related_Request__c/fields/Question_Log__c.field-meta.xml
<CustomField>
    <fullName>Question_Log__c</fullName>
    <label>Question Log</label>
    <referenceTo>Question_Log__c</referenceTo>
    <relationshipLabel>Related Requests</relationshipLabel>
    <relationshipName>Related_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>