force-app/main/default/objects/Related_Request__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Request</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>Related Requests</relationshipLabel>
    <relationshipName>Related_Requests</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>